objects/HarvestIntegration__mdt.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <label>Accept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentType__c</fullName>
        <label>ContentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HarvestAccountId__c</fullName>
        <label>HarvestAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User-Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HarvestIntegration</label>
    <pluralLabel>HarvestIntegrations</pluralLabel>
</CustomObject>